k8s/github_runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-visualizer-runner
  namespace: sachs
  labels:
    app: api-visualizer-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-visualizer-runner
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: api-visualizer-runner
    spec:
      containers:
        - name: github-runner
          image: tcardonne/github-runner
          securityContext:
            privileged: true
          volumeMounts:
            - name: work
              mountPath: "****"
            - name: dockersock
              mountPath: "****"
      volumes:
        - name: work
          hostPath:
            path: "****"
        - name: dockersock
          hostPath:
            path: "****"
