k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: api-visualizer-service
  namespace: sachs
spec:
  ports:
  - protocol: TCP
    port: 8090
  selector:
    app: api-visualizer
