k8s/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: api-visualizer-ingress
  namespace: sachs
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
      - api-visualizer.app.datexis.com
    secretName: api-visualizer-ingress-tls
  rules:
  - host: api-visualizer.app.datexis.com
    http:
      paths:
      - backend:
          serviceName: api-visualizer-service
          servicePort: 8090
